--- a/app.component.html
+++ b/app.component.html
@@ -34,7 +34,7 @@
   <!-- Footer -->
    <footer class="whitesection" id="footer">
     <div class="container-fluid">
-      <p>© Copyrsocial-icon ight 2020 Team4</p>
+      <p>© Copyright 2020 Team4</p>
     </div>
     </footer>
 
