Updated marquee tag

--- a/app.component.html
+++ b/app.component.html
@@ -11,7 +11,7 @@
 </nav>
 <!--Headings Space-->
 <div class="container-fluid">
-<h2> Retail Bank Management System  </h2>
+<marquee><h2> Retail Bank Management System  </h2></marquee>
 </div>
     <section class="blue-grey" id="features">
     <div class="container-fluid">
