--- a/src/app/Executive/Account-Create/account-create.component.html
+++ b/src/app/Executive/Account-Create/account-create.component.html
@@ -1,2 +1,57 @@
-<h1>Account Create Component</h1>
-<p>Here the admin will be able to create an account</p>
+<!-- NavBar-->
+<nav class="blue-grey">
+    <div class="nav-wrapper">
+    <a href="#" class="brand-logo center">Team4-Bank</a>
+    <ul id="nav-mobile" class="right hand-on-med-and-down">
+    <li>
+    <a routerLink="/Login">Logout</a>
+    </li>
+    </ul>
+    </div>
+    </nav>
+    <!--Heading-->
+    <div class="brand-logo center">
+    <h3>Create Acount</h3>
+    </div>
+    <!--Form-->
+    <div class="container">
+    <div class="col s6 offset-s3">
+    <div class="card">
+    <div class="card-content">
+    <form #registerForm="ngForm">
+    <div class="row">
+    <div class="input-field col s12">
+    <input type="text" name="Cust_ID">
+    <label> Customer ID</label>
+    </div>
+    </div>
+    
+     <div class="form-group">
+     <label for="website">Account Type</label>
+                <select formControlName="Acct_Type" class="form-control">
+                    <option>Checkin</option>
+                    <option>Savings</option>
+                </select>
+            </div>
+    <div class="row">
+    <div class="input-field col s12">
+    <input type="text" name="Balance">
+    <label> Deposit Amount</label>
+    </div>
+    </div>
+    <div class="row">
+    <div class="input-field col s12">
+    <button class="btn-large btn-submit" type="submit" [disabled]="!registerForm.valid">Submit</button>
+    </div>
+    </div>
+    </form>
+    </div>
+    </div>
+    </div>
+    </div>
+    <!-- Footer -->
+       <footer class="whitesection" id="footer">
+        <div class="container-fluid">
+          <p style="text-align:center">© Copyright 2020 Team4</p>
+        </div>
+        </footer>
