--- a/src/app/Executive/Customer-Master/customer-master.component.html
+++ b/src/app/Executive/Customer-Master/customer-master.component.html
@@ -1,5 +1,31 @@
-<h1>Customer Master Component</h1>
+<!--<h1>Customer Master Component</h1>
 <p>This will be the main list of customers for the admin with complete searching functionality</p>
 <p>Here the admin will have access to controls that will bring him to the Create and Update Components</p>
 <p>On this screen the delete function will also exist.</p>
-<p>Status for all of the Customers will be here as well </p>
+<p>Status for all of the Customers will be here as well </p>-->
+
+<!-- NavBar-->
+<nav class="blue-grey">
+    <div class="nav-wrapper">
+    <a href="#" class="brand-logo center">Team4-Bank</a>
+    <ul id="nav-mobile" class="right hand-on-med-and-down">
+    <li>
+    <a routerLink="/Login">Logout</a>
+    </li>
+    </ul>
+    </div>
+    </nav>
+    <!--Heading-->
+    <div class="brand-logo center">
+    <h3>View Customer</h3>
+    </div>
+    
+    
+    
+    
+     <!-- Footer -->
+       <footer class="whitesection" id="footer">
+        <div class="container-fluid">
+          <p>© Copyright 2020 Team4</p>
+        </div>
+        </footer>
