--- a/src/app/Auth/Login/login.component.html
+++ b/src/app/Auth/Login/login.component.html
@@ -58,7 +58,7 @@
     <div class="row">
     <div class="input-field col s12">
     <button class="btn-large btn-submit" type="submit" [disabled]="!registerForm.valid">Submit</button>
-    <h6 style="text-align:center">If you don't have account?  <a href="">Sign Up Here</a> </h6>
+    <h6 style="text-align:center">If you don't have account?  <a routerLink="/Sign-Up">Sign Up Here</a> </h6>
       <br>
       <br>
     </div>
