--- a/src/app/Teller/Account-Transfer/account-transfer.component.html
+++ b/src/app/Teller/Account-Transfer/account-transfer.component.html
@@ -1,2 +1,109 @@
-<h1>Account Transfer</h1>
-<p>Herer the admin user will be able to conduct transferes to a predetermined account</p>
+<!--<h1>Account Transfer</h1>
+<p>Herer the admin user will be able to conduct transferes to a predetermined account</p>-->
+
+<!--<h1>Account Details Screen - Main Screen</h1>
+<p>This is the main screen for the Teller. From here they will have controls to Deposit Transfer And Withdraw Screen</p>
+<p>This screen is just a single search box, do not get all accounts here the Teller has to search for a specific account here</p>-->
+
+
+<!-- NavBar-->
+<nav class="blue-grey">
+    <div class="nav-wrapper">
+    <a href="#" class="brand-logo center">Team4-Bank</a>
+    <ul id="nav-mobile" class="right hand-on-med-and-down">
+    <li>
+    <a routerLink="/Login">Logout</a>
+    </li>
+    </ul>
+    </div>
+    </nav>
+    <!--Heading-->
+    <div class="brand-logo center">
+    <h3>Transfer</h3>
+    </div>
+    <!--Form-->
+    <div class="container">
+    <div class="col s6 offset-s3">
+    <div class="card">
+    <div class="card-content">
+    <form  name="" #registerForm="ngForm">
+    <div class="row">
+    <div class="input-field col s12">
+    <input type="text" name="">
+    <label> Transfer Amount</label>
+    </div>
+    </div>
+    <div class="row">
+    <div class="input-field col s12">
+    <input type="text" name="">
+    <label> Source Account (From)</label>
+    </div>
+    </div>
+    <div class="row">
+    <div class="input-field col s12">
+    <input type="text" name="">
+    <label> Target Account (To)</label>
+    </div>
+    </div>
+    <div class="row">
+    <div class="input-field col s12">
+    <button class="btn-large btn-submit" type="submit" [disabled]="!registerForm.valid">Transfer</button>
+    </div>
+    </div>
+    </form>
+    </div>
+    </div>
+    </div>
+    
+    <!--Display the records -->
+    <div class="container-fluid">
+        <table>
+            <tr>
+                <th>Acccount ID</th>
+                <th>Balance Before Transfer</th>    <!--Before Transfer-->
+                <th>Balance After Transfer</th> <!--After Deposit-->
+            </tr>
+            <tr>
+            <!--Code to be added-->
+            <!--<tr *ngFor="let book of books">
+                <td>{{ book.id }}</td>
+                <td>{{ book.title }}</td>
+                <td>{{ book.author }}</td>
+                <td>{{ book.price }}</td>-->
+                </tr>
+            <tr>
+             <th>Target Acount ID</th> 
+             <th>Balance Before Transfer</th>    <!--Before Transfer-->
+              <th>Balance After Transfer</th>
+    
+             </tr>
+             <tr>
+            <!--Code to be added-->
+            <!--<tr *ngFor="let book of books">
+                <td>{{ book.id }}</td>
+                <td>{{ book.title }}</td>
+                <td>{{ book.author }}</td>
+                <td>{{ book.price }}</td>-->
+                </tr>
+            <tr>
+            </tr>
+            <tr>
+            </tr>
+            <tr>
+            </tr>
+            
+                <td> 
+                    <button  class="btn btn-sm btn-outline-primary" routerLink="/Teller">Back</button> 
+                </td>
+        </table>
+        <hr>
+    </div>
+    
+      <!-- Footer -->
+       <footer class="whitesection" id="footer">
+        <div class="container-fluid">
+          <p style="text-align:center">© Copyright 2020 Team4</p>
+        </div>
+        </footer>
+    
+    
