--- a/src/app/Executive/Customer-Update/customer-update.component.html
+++ b/src/app/Executive/Customer-Update/customer-update.component.html
@@ -1,62 +1,66 @@
 <!-- NavBar-->
 <nav class="blue-grey">
     <div class="nav-wrapper">
-    <a href="#" class="brand-logo center">Team4-Bank</a>
-    <ul id="nav-mobile" class="right hand-on-med-and-down">
-    <li>
-    <a routerLink="/Login">Logout</a>
-    </li>
-    </ul>
+        <a href="#" class="brand-logo center">Team4-Bank</a>
+        <ul id="nav-mobile" class="right hand-on-med-and-down">
+            <li>
+                <a routerLink="/Login">Logout</a>
+            </li>
+        </ul>
     </div>
-    </nav>
-    <!--Heading-->
-    <div class="brand-logo center">
+</nav>
+<!--Heading-->
+<div class="brand-logo center">
     <h3>Edit Customer</h3>
-    </div>
-    <!--Form-->
-    <div class="container">
+</div>
+<!--Form-->
+<div class="container">
     <div class="col s6 offset-s3">
-    <div class="card">
-    <div class="card-content">
-    <form  name="updateForm" #registerForm="ngForm">
-    <div class="row">
-    <div class="input-field col s12">
-    <input type="text" name="SSN">
-    <label> Customer SSN ID</label>
-    </div>
-    </div>
-    
-    <h3 style="text-align:center"> OR </h3>
-    <div class="row">
-    <div class="input-field col s12">
-    <input type="text" name="Cust_ID">
-    <label> Customer ID</label>
-    </div>
-    </div>
-    <div class="row">
-    <div class="input-field col s12">
-    <button class="btn-large btn-submit" type="submit" [disabled]="!registerForm.valid" onClick="validateAndSend()">Submit</button>
-    <script>
-    function validateAndSend() {
-                if (updateForm.SSN.value == '' && updateForm.mobile.value == '') {
-                    alert('You have to enter at least one value.');
-                    return false;
-                }
-                else {
-                    updateForm.submit();
-                }
-            }
-        </script>
-    </div>
-    </div>
-    </form>
-    </div>
-    </div>
-    </div>
-      <!-- Footer -->
-       <footer class="whitesection" id="footer">
-        <div class="container-fluid">
-          <p style="text-align:center">© Copyright 2020 Team4</p>
+        <div class="card">
+            <div class="card-content">
+                <form [formGroup]="form">
+                    <div class="form-group">
+                        <div class="input-field col s12">
+                          <input id="ssn" formControlName="ssn" type="text" class="form-control" ngModel pattern="[0-8]{9}">
+                        </div>
+                        <div>
+                          <label class="col-sm-6 control-label" for="ssn"> Customer SSN</label>
+                        </div>
+                      </div>
+
+                    <h3 style="text-align:center"> OR </h3>
+                    <div class="form-group">
+                        <div class="input-field col s12">
+                          <input id="customerID" formControlName="customerID" type="number" class="form-control">
+                        </div>
+                        <div>
+                          <label class="col-sm-6 control-label" for="customerID"> Customer ID</label>
+                        </div>
+                      </div>
+                    <div class="row">
+                        <div class="input-field col s12">
+                            <button class="btn-large btn-submit" type="submit" [disabled]="!form.valid"
+                                onClick="validateAndSend()">Submit</button>
+                            <script>
+                                function validateAndSend() {
+                                    if (updateForm.SSN.value == '' && updateForm.mobile.value == '') {
+                                        alert('You have to enter at least one value.');
+                                        return false;
+                                    }
+                                    else {
+                                        updateForm.submit();
+                                    }
+                                }
+                            </script>
+                        </div>
+                    </div>
+                </form>
+            </div>
         </div>
-        </footer>
-    
+    </div>
+    <!-- Footer -->
+    <footer class="whitesection" id="footer">
+        <div class="container-fluid">
+            <p style="text-align:center">© Copyright 2020 Team4</p>
+        </div>
+    </footer>
