--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,20 @@
+<!-- NavBar-->
+<nav class="blue-grey">
+    <div class="nav-wrapper">
+    <a href="#" class="brand-logo center">Team4-Bank</a>
+    <ul id="nav-mobile" class="right hand-on-med-and-down">
+    <li>
+    <a routerLink="/Login">Logout</a>
+    </li>
+    </ul>
+    </div>
+    </nav>
+
 <router-outlet></router-outlet>
+
+<!-- Footer -->
+<footer class="whitesection" id="footer">
+    <div class="container-fluid">
+      <p style="text-align:center">© Copyright 2020 Team4</p>
+    </div>
+    </footer>
