--- a/src/app/Executive/Customer-Create/customer-create.component.html
+++ b/src/app/Executive/Customer-Create/customer-create.component.html
@@ -7,7 +7,7 @@
   <div class="col s6 offset-s3">
     <div class="card">
       <div class="card-content">
-        <form [formGroup]="form">
+        <form [formGroup]="form" (ngSubmit)="postCustomer()" >
             <div class="form-group">
               <div class="input-field col s12">
                 <input id="ssn" formControlName="ssn" type="text" class="form-control" ngModel pattern="[0-8]{9}">
