--- a/src/app/Executive/Customer-Update/customer-update.component.html
+++ b/src/app/Executive/Customer-Update/customer-update.component.html
@@ -1,52 +1,52 @@
 <!--Heading-->
 <div class="brand-logo center">
-    <h3>Edit Customer</h3>
-</div>
-<!--Form-->
-<div class="container">
+    <h3>Update Customer</h3>
+  </div>
+  <!--Form-->
+  <div class="container">
     <div class="col s6 offset-s3">
-        <div class="card">
-            <div class="card-content">
-                <form [formGroup]="form">
-                    <div class="form-group">
-                        <div class="input-field col s12">
-                          <input id="ssn" formControlName="ssn" type="text" class="form-control" ngModel pattern="[0-8]{9}">
-                        </div>
-                        <div>
-                          <label class="col-sm-6 control-label" for="ssn"> Customer SSN</label>
-                        </div>
-                      </div>
-
-                    <h3 style="text-align:center"> OR </h3>
-                    <div class="form-group">
-                        <div class="input-field col s12">
-                          <input id="customerID" formControlName="customerID" type="number" class="form-control">
-                        </div>
-                        <div>
-                          <label class="col-sm-6 control-label" for="customerID"> Customer ID</label>
-                        </div>
-                      </div>
-                    <div class="row">
-                        <div class="input-field col s12">
-                            <button class="btn-large btn-submit" type="submit" [disabled]="!form.valid"
-                                onClick="validateAndSend()">Submit</button>
-                            <script>
-                                function validateAndSend() {
-                                    if (updateForm.SSN.value == '' && updateForm.mobile.value == '') {
-                                        alert('You have to enter at least one value.');
-                                        return false;
-                                    }
-                                    else {
-                                        updateForm.submit();
-                                    }
-                                }
-                            </script>
-                        </div>
-                    </div>
-                </form>
+      <div class="card">
+        <div class="card-content">
+          <form [formGroup]="form" (ngSubmit)="postCustomer()" >
+              <div class="form-group">
+                <div class="input-field col s12">
+                  <input id="ssn" formControlName="ssn" type="text" class="form-control" ngModel pattern="[0-8]{9}" >
+                </div>
+                <div>
+                  <label class="col-sm-6 control-label" for="ssn"> Customer SSN (Required)</label>
+                </div>
+              </div>
+              <div class="form-group">
+                <div class="input-field col s12">
+                  <input id="name" formControlName="name" type="text" class="form-control" >
+                </div>
+                <div>
+                  <label class="col-sm-6 control-label" for="name"> Customer Name</label>
+                </div>
+              </div>
+              <div class="form-group">
+                <div class="input-field col s12">
+                  <input id="age" formControlName="age" type="number" class="form-control">
+                </div>
+                <div>
+                  <label class="col-sm-6 control-label" for="age"> Customer Age</label>
+                </div>
+              </div>
+              <div class="form-group">
+                <div class="input-field col s12">
+                  <input id="address" formControlName="address" type="text" class="form-control" >
+                </div>
+                <div>
+                  <label class="col-sm-6 control-label" for="address1"> Customer Address</label>
+                </div>
+              </div>
+          <div class="row">
+            <div class="input-field col s12">
+              <button class="btn-large btn-submit" type="submit" [disabled]="!form.valid">Submit</button>
             </div>
+          </div>
+          </form>
         </div>
+      </div>
     </div>
-</div>    
-
-    
+  </div>
