Executive Component: Account Master- View Updated

--- a/Account-Master/account-master.component.html
+++ b/Account-Master/account-master.component.html
@@ -19,6 +19,39 @@
 <div class="brand-logo center">
 <h3>View Account</h3>
 </div>
+<!--View-->
+<!--Display the 3 buttons -->
+<div class="container-fluid">
+    <table>
+        <tr>
+            <th>Customer ID</th>
+            <th>Account Type</th>
+            <th>Status</th>
+            <th>Message</th>
+             <th>Last Updated</th>
+        </tr>
+        
+        <tr>
+        <!--Code to be added-->
+        <!--<tr *ngFor="let book of books">
+
+            <td>{{ book.id }}</td>
+            <td>{{ book.title }}</td>
+            <td>{{ book.author }}</td>
+            <td>{{ book.price }}</td>-->
+           
+            
+            <td> 
+                <button  class="btn btn-sm btn-outline-primary" routerLink="">Delete</button> 
+            </td>
+            <td> 
+                <button  class="btn btn-sm btn-outline-primary" routerLink="">Refresh</button> 
+            </td>
+             </tr>
+    </table>
+    <hr>
+</div>
+
 
 
 
