added functionality to all teller except Statement

--- a/src/app/Teller/Account-Deposit/account-deposit.component.html
+++ b/src/app/Teller/Account-Deposit/account-deposit.component.html
@@ -11,10 +11,10 @@
     <div class="col s6 offset-s3">
     <div class="card">
     <div class="card-content">
-    <form  name="" #registerForm="ngForm">
+    <form  name="" #registerForm="ngForm"  [formGroup]="form" (ngSubmit)="postTransaction()">
     <div class="row">
     <div class="input-field col s12">
-    <input type="text" name="">
+    <input type="number" name="amount" formControlName="amount">
     <label> Deposit Amount</label>
     </div>
     </div>
@@ -38,19 +38,11 @@
                 <th>Balance After</th> <!--After Deposit-->
             </tr>
             <tr>
+                <td>{{this.account.Cust_Id}}</td>
+                <td>{{this.account.Acct_Id}}</td>
+                <td>{{this.account.Balance}}</td>
+                <td>{{getNewBalance()}}</td>
             </tr>
-            <tr>
-            </tr>
-            <tr>
-            </tr>
-            <tr>
-            <!--Code to be added-->
-            <!--<tr *ngFor="let book of books">
-                <td>{{ book.id }}</td>
-                <td>{{ book.title }}</td>
-                <td>{{ book.author }}</td>
-                <td>{{ book.price }}</td>-->
-                </tr>
                 <td> 
                     <button  class="btn btn-sm btn-outline-primary" routerLink="/Teller">Back</button> 
                 </td>
